Standard endpoint and openAPI description
