# reservation/views/reservation.py
@@ -14,8 +14,27 @@ from api_call import get_tables, get_workingdays
 reservations = Blueprint('reservation', __name__)
 
 # get all the reservation
-def get_all_reservation():
-    reservation_records = db_session.query(Reservation).all()
+def get_all_reservations():
+    reservation_records = []
+    cnt = 0
+    if 'user_id' in request.args:
+        cnt = cnt +1
+        reservation_records = db_session.query(Reservation).filter_by(booker_id=request.args['user_id']).all()
+    if 'restaurant_id' in request.args:
+        cnt = cnt +1
+        reservation_records = db_session.query(Reservation).filter_by(restaurant_id=request.args['restaurant_id']).all()
+    if 'start_date' in request.args:
+        cnt = cnt + 1
+        return
+        #TODO: convert in date and filter the search
+    if 'end_date' in request.args:
+        cnt = cnt +1
+        return
+        #TODO: convert in date and filter the search
+    if cnt == 0:
+        reservation_records = db_session.query(Reservation).all()
+    elif cnt > 1:
+        return connexion.problem(400, 'Bad Request', 'Too much arguments in the query')
     return [reservation.serialize() for reservation in reservation_records]
 
 
@@ -37,13 +56,7 @@ def get_seats(reservation_id):
     seats = db_session.query(Seat).filter_by(reservation_id=reservation_id).all()
     return [seat.serialize() for seat in seats]
 
-
-# get all the reservations for a restaurant
-def get_restaurant_reservations(restaurant_id):
-    # get the future reservation
-    reservation_records = db_session.query(Reservation).filter(Reservation.restaurant_id == restaurant_id, Reservation.cancelled == False, Reservation.date >= datetime.datetime.now() - timedelta(hours=3)).all()
-    return [reservation.serialize() for reservation in reservation_records]
-
+# utility to convert days in number
 def convert_weekday(day):
     if day == 'monday':
         return 1
@@ -61,7 +74,7 @@ def convert_weekday(day):
         return 7
 
 # create a reservation
-def create_reservation(user_id):
+def create_reservation():
 
     r = request.json
     print(r)
@@ -74,13 +87,10 @@ def create_reservation(user_id):
     # check if the day is open this day
     weekday = date.weekday() + 1
     workingdays = get_workingdays(restaurant_id).json()
-    print(workingdays)
     workingday = None
     for w in workingdays:
-        print(w)
-        #wd = ast.literal_eval(w)
-        print(w['day'], weekday)
-        if convert_weekday(w['day']) == weekday:
+        #if convert_weekday(w['day']) == weekday:
+        if w['day'] == weekday:
             workingday = w
     if workingday is None:
         return connexion.problem(400, 'Error', 'Restaurant is not open this day!')
@@ -105,8 +115,6 @@ def create_reservation(user_id):
     all_tables = get_tables(restaurant_id).json()
     tables = []
     for table in all_tables:
-        #t = ast.literal_eval(table)
-        print(table)
         if table['capacity'] >= r['places']:
             tables.append(table)
     if len(tables) == 0:
@@ -212,33 +220,6 @@ def delete_reservation(reservation_id):
 
 #edit the reservation with specific id
 def edit_reservation(reservation_id):
-    """
-    # without number of places changed
-    old_res = db_session.query(Reservation).filter_by(id=reservation_id).first()
-    if old_res is None:
-        return connexion.problem(404, 'Not found', 'There is not a reservation with this ID')
-
-    #db_session.delete(old_res.seats) # delete all old seats data DOES NOT WORK IN THIS WAY
-    
-    seats_to_remove = db_session.query(Seat).filter_by(reservation_id=reservation_id).all()
-    for s in seats_to_remove:
-        db_session.delete(s)
-
-    rs = request.json # save all new seats data
-
-    for r in rs: #get an array of new seats
-        #print(i['confirmed'])
-
-        seat = Seat()
-        seat.reservation_id = reservation_id
-        seat.guests_email = r['guests_email']
-        seat.confirmed = r['confirmed']
-        db_session.add(seat)
-
-    db_session.commit()        
-    return 'Reservation is edited successfully'
-
-    """
 
     # {'places':2}
     # {'seats': [{-----}]}
@@ -318,109 +299,6 @@ def edit_reservation(reservation_id):
 
 
 
-
-
-
-# get all the reservation in which user is interested
-def get_user_reservations(user_id):
-    reservation_records = db_session.query(Reservation).filter_by(booker_id=user_id,cancelled=False).all()
-    return [reservation.serialize() for reservation in reservation_records]
-    '''
-    user = requests.get('http://127.0.0.1:5000/users/'+str(user_id)) #ASK USERS 
-    #print(user.status_code)
-
-    data_dict = []
-    if user.status_code == 200 :
-        user_content = user.json()
-        #print(user_content['phone'])
-        print(user_content['role'])
-
-        if user_content['role'] == 'customer':  #TODO complete first post reservation in our db
-            reservation_records = db_session.query(Reservation).filter(
-                Reservation.booker_id == user_content['id'],
-                Reservation.cancelled == False,
-                #Reservation.date >= datetime.datetime.now()
-            ).all()
-            #print(len(reservation_records))
-
-            for reservation in reservation_records:
-
-                restaurant = requests.get("http://127.0.0.1:5000/restaurants/reservation/"+str(reservation.restaurant_id)) #ASK RESTAURANTS                       
-                if restaurant.status_code == 200:
-                    restaurant_content = restaurant.json()
-
-                    temp_dict = dict(
-                        restaurant_name=restaurant_content['name'],
-                        date=reservation.date,
-                        reservation_id=reservation.id
-                    )
-                    data_dict.append(temp_dict)
-            return data_dict
-
-        elif user_content['role'] == 'owner':
-            restaurants_records = requests.get("http://127.0.0.1:5000/restaurants/users/"+str(user_content['id']))    #ASK RESTAURANTS    
-            if restaurant_records.status_code == 200:
-                restaurant_records_content = restaurant_records.json()
-
-                for restaurant in restaurants_records_content:
-                    reservation_records = db.session.query(Reservation).filter(
-                        Reservation.restaurant_id == restaurant['id'],
-                        Reservation.cancelled == False,
-                        Reservation.date >= datetime.datetime.now() - timedelta(hours=3)
-                    ).all()
-
-                    for reservation in reservation_records:
-                        seat = db_session.query(Seat).filter(Seat.reservation_id == reservation.id).all()
-                        booker = requests.get("http://127.0.0.1:5000/users/"+str(reservation.booker_id)) 
-                        table = requests.get('http://127.0.0.1:5000/restaurants/tables'+str(reservation.table_id)) #ASK RESTAURANTS
-
-                        if booker.status_code == 200 and table.status_code == 200:
-                            booker_content = booker.json()
-                            table_content = table.json()
-
-                            temp_dict = dict(
-                                restaurant_name=restaurant['name'],
-                                restaurant_id=restaurant['id'],
-                                date=reservation.date,
-                                table_name=table_content['table_name'],
-                                booker_fn=booker_content['firstname'],
-                                booker_ln=booker_content['lastname'],
-                                booker_phone=booker_content['phone'],
-                                reservation_id=reservation.id
-                            )
-                            data_dict.append(temp_dict)
-                data_dict = sorted(data_dict, key=lambda i: (i['restaurant_name'], i['date']))
-            return data_dict
-
-        elif user_content['role'] == 'ha': 
-            return  Response('It is not allowed', status=403)
-
-        else: 
-            reservation_records = db_session.query(Reservation).filter(
-                Reservation.booker_id == user_content['id']
-            ).all()
-
-            for reservation in reservation_records:
-                temp_dict = dict(
-                    reservation_id=reservation.id,
-                    booker_id=reservation.booker_id,
-                    restaurant_id=reservation.restaurant_id,
-                    table_id=reservation.table_id,                    
-                    date=reservation.date,
-                    cancelled=reservation.cancelled
-                )
-                data_dict.append(temp_dict)
-
-                seat_records = db_session.query(Seat).filter(Seat.reservation_id == reservation.id).all()
-                for seat in seat_records:
-                    temp_dict = dict(
-                        seat_id=seat.id,
-                        reservation_id=seat.reservation_id,
-                        guests_email=seat.guests_email,
-                        confirmed=seat.confirmed                        
-                    )
-                data_dict.append(temp_dict)
-            return data_dict
-    else:
-        return Response('It is not a user', status=403)
-    '''
+def delete_reservations():
+    return 200
+    
